--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
       <a class="button-like cta" href="./redirect.html?s=features">Try for free</a>
     </section>
 
-    <section id="pricing">
+    <section id="pricing" class="yearly">
       <h2>Pricing</h2>
-      <div class="main-text">Simple plans, no hidden fees. Choose the right one for you.</div>
+      <div class="main-text">Simple and transparent. Choose the right plan for you.</div>
       <div class="package-types-tabs">
           <div class="tab-center">
             <ol class="tab-control noselect">
@@ -287,7 +287,7 @@
                 </div>
                 <div class="title">Basic</div>
                 <div class="price monthly-price">$11.90 / month</div>
-                <div class="price yearly-price">$9.80 / month</div>
+                <div class="price yearly-price">$9.50 / month</div>
                 <div class="description">
                   10 coupons per month.
                 </div>
@@ -298,7 +298,7 @@
               <div class="column-header ribbon-holder">
                 <div class="title">Pro</div>
                 <div class="price monthly-price">$19.90 / month</div>
-                <div class="price yearly-price">$17.80 / month</div>
+                <div class="price yearly-price">$15.90 / month</div>
                 <div class="description">
                   1000 coupons per month.
                 </div>
