--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </ul>
 
     <section>
-      <h1>Sell more and earn more money.</h1>
+      <h1>Sell more. Earn more money.</h1>
       <div class="main-text">Create beautifully designed gift coupons for your customers in less than a minute.</div>
       <div class="reviews">
         <div class="avatar-group">
