Vertical points styling for mobile

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <div class="left text">        
         <div class="center-vertically">
           <h2>How it works?</h2>
-          <div class="main-text">Creating gift coupons has never been this simple.</div>
+          <div class="main-text">Creating gift coupons has never been so simple.</div>
           <ul class="vertical-points">
             <li>
               <div class="rounded-icon">
