--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
   </head>
 
   <!-- Google tag (gtag.js) -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-1BMENZF3VQ"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z9EEK3YJFX"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-1BMENZF3VQ');
-  </script> -->
+    gtag('config', 'G-Z9EEK3YJFX');
+  </script>>
   
   <body>
     
