--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="minimum-scale=1, maximum-scale=1, initial-scale=1, width=device-width" />
-    <!-- <link rel="icon" sizes="192x192" href="./images/192icon.png" type="image/png">
+    <link rel="icon" sizes="192x192" href="./images/192icon.png" type="image/png">
     <link rel="shortcut icon" href="./images/192icon.png" type="image/png">
-    <link rel="apple-touch-icon" href="./images/192icon.png" type="image/png"> -->
+    <link rel="apple-touch-icon" href="./images/192icon.png" type="image/png">
     <title>Free Gift Coupon Maker</title>
-    <!-- <meta name="description" content="Preprosto izdajanje računov in e-računov. Avtomatski vnos partnerjev, pošiljanje računov po e-mailu in enostaven pregled nad plačanimi računi. Odličen za mala podjetja in s.p.-je." />
-    <link rel="canonical" href="https://www.evelope.si">
-    <meta property="og:title" content="Evelope | Enostaven program za izdajanje računov">
-    <meta property="og:description" content="Preprosto izdajanje računov in e-računov. Avtomatski vnos partnerjev, pošiljanje računov po e-mailu in enostaven pregled nad plačanimi računi. Odličen za mala podjetja in s.p.-je.">
-    <meta property="og:url" content="https://www.evelope.si">
-    <meta property="og:site_name" content="Evelope">
+    <meta name="description" content="Create beautifully designed gift coupons for your customers in less than a minute." />
+    <link rel="canonical" href="https://www.creategiftcoupons.com/">
+    <meta property="og:title" content="Free Gift Coupon Maker">
+    <meta property="og:description" content="Create beautifully designed gift coupons for your customers in less than a minute.">
+    <meta property="og:url" content="https://www.creategiftcoupons.com/">
+    <meta property="og:site_name" content="Free Gift Coupon Maker">
     <meta property="og:type" content="website">
-    <meta name="facebook-domain-verification" content="7v544d9mz1r41d8wwb1fru6hel1vy0">
-    <meta name="google-site-verification" content="E-J6jssGMO7DsJU74ixACYVaPxz0m_aLPopzxmUZw4o">
+    <!-- <meta name="facebook-domain-verification" content="7v544d9mz1r41d8wwb1fru6hel1vy0">
+    <meta name="google-site-verification" content="E-J6jssGMO7DsJU74ixACYVaPxz0m_aLPopzxmUZw4o"> -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Evelope | Enostaven program za izdajanje računov">
-    <meta name="twitter:description" content="Preprosto izdajanje računov in e-računov. Avtomatski vnos partnerjev, pošiljanje računov po e-mailu in enostaven pregled nad plačanimi računi. Odličen za mala podjetja in s.p.-je."> -->
+    <meta name="twitter:title" content="Free Gift Coupon Maker">
+    <meta name="twitter:description" content="Create beautifully designed gift coupons for your customers in less than a minute.">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
@@ -308,21 +308,6 @@
         </div>
       </div>
     </section>
-
-    <!-- <section class="text-by-image">
-      <div class="left text">
-        <div class="center-vertically">
-          <h2>Preizkusi brez kreditne kartice.</h2>
-          <div class="main-text">Z Evelope lahko vsak mesec brezplačno izdaš dva računa, za registracijo pa ne potrebuješ kreditne kartice.</div>
-          <a class="button-like" href="./redirect.html">Preizkusi zdaj</a>
-        </div>
-      </div>
-      <div class="right image">
-        <div class="outline invisible">
-          <img decoding="async" class="big" src="./images/workplace-happiness3.jpg" alt="Workplace happiness" />
-        </div>
-      </div>
-    </section> -->
 
     <section id="contact" class="text-by-image">
       <div class="left image">
