Fixed alt attributes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
     <header>
       <a class="logo">
-        <img decoding="async" src="./images/192icon.png" alt="Logo" />
+        <img decoding="async" src="./images/192icon.png" alt="logo" />
         <span class="logo-text">Gift Coupon Maker</span>
       </a>
       <ul class="horizontal hide-on-mobile">
@@ -183,7 +183,7 @@
       </div>
       <div class="right image">
         <div class="outline">
-          <img decoding="async" src="./images/pdfexample.png" alt="Primer računa v PDF obliki" />
+          <img decoding="async" src="./images/pdfexample.png" alt="coupon example" />
         </div>
       </div>
     </section>
@@ -312,7 +312,7 @@
     <section id="contact" class="text-by-image">
       <div class="left image">
         <div class="outline invisible">
-          <img decoding="async" class="big" src="./images/workplace-happiness3.jpg" alt="Workplace happiness" />
+          <img decoding="async" class="big" src="./images/workplace-happiness3.jpg" alt="workplace happiness" />
         </div>
       </div>
       <div class="right text"> 
