Removed some characters

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       'allow_ad_personalization_signals': false, // Disables ad personalization signals (we don't want to show cookie banner)
       'storage': 'none' // Prevents the storage of cookies (we don't want to show cookie banner)
     });
-  </script>>
+  </script>
   
   <body>
     
