--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           </div>
           <div class="text">
             <h5>Personalized.</h5>
-            <div>Each coupon can be personalized with a wrtten message.</div>
+            <div>Each coupon can be personalized with a written message.</div>
           </div>
         </li>
         <li class="horizontal">
