Features copy change

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           </div>
           <div class="text">
             <h5>Fast.</h5>
-            <div>Creating a new coupon takes only a few seconds.</div>
+            <div>Creating each coupon takes only a few seconds.</div>
           </div>
         </li>
         <li class="horizontal">
@@ -217,7 +217,7 @@
           </div>
           <div class="text">
             <h5>Beautiful.</h5>
-            <div>Choose from beautiful designed templates.</div>
+            <div>Choose from beautifully designed coupon templates.</div>
           </div>
         </li>
         <li class="horizontal">
@@ -235,7 +235,7 @@
           </div>
           <div class="text">
             <h5>Customizable.</h5>
-            <div>Use your company logo and colors on each coupon.</div>
+            <div>Incorporate your company logo and colors into each coupon.</div>
           </div>
         </li>
         <li class="horizontal">
@@ -244,7 +244,7 @@
           </div>
           <div class="text">
             <h5>Multipurpose.</h5>
-            <div>Coupons can be made for a product, service or cash value.</div>
+            <div>Coupons can be made for a product, service, or cash value.</div>
           </div>
         </li>
         <li class="horizontal">
@@ -253,7 +253,7 @@
           </div>
           <div class="text">
             <h5>Secure.</h5>
-            <div>Avoid same coupon being used multiple times.</div>
+            <div>Avoid the same coupon being used multiple times.</div>
           </div>
         </li>
       </ul>
