--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
       </div>
     </section>
     
-    <div class="center">
+    <section class="cta-only">
       <a class="button-like cta" href="./redirect.html?s=main-cta">Sign up</a>
-    </div>
+    </section>
 
     <section id="features">
       <h2>Features</h2>
