Hide hamburger menu when clicking any links inside it

--- a/index.html
+++ b/index.html
@@ -74,20 +74,20 @@
 
     <ul id="hamburger-menu" class="show-only-on-mobile">
       <li>
-        <a href="./index.html">Home</a>
+        <a href="./index.html" onClick="document.getElementById('hamburger-menu').classList.toggle('expanded');">Home</a>
       </li>
       <li>
-        <a href="./index.html#features">Features</a>
+        <a href="./index.html#features" onClick="document.getElementById('hamburger-menu').classList.toggle('expanded');">Features</a>
       </li>
       <li>
-        <a href="./index.html#pricing">Pricing</a>
+        <a href="./index.html#pricing" onClick="document.getElementById('hamburger-menu').classList.toggle('expanded');">Pricing</a>
       </li>
       <li>
-        <a href="./index.html#contact">Contact</a>
+        <a href="./index.html#contact" onClick="document.getElementById('hamburger-menu').classList.toggle('expanded');">Contact</a>
       </li>
       <li>
         <div>
-          <a class="button-like" href="./redirect.html?s=header">Login</a>
+          <a class="button-like" href="./redirect.html?s=header" onClick="document.getElementById('hamburger-menu').classList.toggle('expanded');">Login</a>
         </div>
       </li>
     </ul>
