Added stripe payment links

--- a/index.html
+++ b/index.html
@@ -276,13 +276,15 @@
           <div class="box">
               <div class="column-header ribbon-holder">
                 <div class="title">Free</div>
-                <div class="price monthly-price">0 €</div>
-                <div class="price yearly-price">0 €</div>
+                <div class="price monthly">0 €</div>
+                <div class="price yearly">0 €</div>
                 <div class="description">
                   2 coupons per month.
                 </div>
               </div>
-              <div class="column-footer"><a class="button-like" href="./redirect.html?s=free">Sign up</a></div>
+              <div class="column-footer">
+                <a class="button-like" href="./redirect.html?s=free">Sign up</a>
+              </div>
           </div>
           <div class="box most-popular">
               <div class="column-header ribbon-holder">
@@ -292,24 +294,30 @@
                     </div>
                 </div>
                 <div class="title">Basic</div>
-                <div class="price monthly-price">$11.90 / month</div>
-                <div class="price yearly-price">$9.50 / month</div>
+                <div class="price monthly">$11.90 / month</div>
+                <div class="price yearly">$9.50 / month</div>
                 <div class="description">
                   10 coupons per month.
                 </div>
               </div>
-              <div class="column-footer"><a class="button-like" href="./redirect.html?s=silver">Pre-order</a></div>
+              <div class="column-footer">
+                <a class="button-like monthly" href="https://buy.stripe.com/test_6oE0358PSgfM12gbII">Pre-order</a>
+                <a class="button-like yearly" href="https://buy.stripe.com/test_14kbLNd687JgbGU6oq">Pre-order</a>
+              </div>
           </div>
           <div class="box">
               <div class="column-header ribbon-holder">
                 <div class="title">Pro</div>
-                <div class="price monthly-price">$19.90 / month</div>
-                <div class="price yearly-price">$15.90 / month</div>
+                <div class="price monthly">$19.90 / month</div>
+                <div class="price yearly">$15.90 / month</div>
                 <div class="description">
                   1000 coupons per month.
                 </div>
               </div>
-              <div class="column-footer"><a class="button-like" href="./redirect.html?s=gold">Pre-order</a></div>
+              <div class="column-footer">
+                <a class="button-like monthly" href="https://buy.stripe.com/test_14k0359TW0gO3aoeUV">Pre-order</a>
+                <a class="button-like yearly" href="https://buy.stripe.com/test_14kdTV4zCd3A4es8wz">Pre-order</a>
+              </div>
           </div>
         </div>
       </div>
