--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </style>
     <link rel="stylesheet" href="build/styles/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@500" rel="stylesheet" />
+    <script async src="https://tally.so/widgets/embed.js"></script>
   </head>
 
   <!-- Google tag (gtag.js) -->
@@ -63,7 +64,7 @@
             <a href="./index.html#contact">Contact</a>
           </li>
           <li>
-            <a class="button-like" href="./redirect.html?s=header">Login</a>
+            <a class="button-like" href="#tally-open=3qEBk7&tally-layout=modal&tally-width=380&tally-emoji-animation=none&tally-auto-close=2000">Login</a>
           </li>
         </ul>
         <button class="hamburger show-only-on-mobile" onClick="document.getElementById('hamburger-menu').classList.toggle('expanded');">
@@ -87,7 +88,7 @@
       </li>
       <li>
         <div>
-          <a class="button-like" href="./redirect.html?s=header" onClick="document.getElementById('hamburger-menu').classList.toggle('expanded');">Login</a>
+          <a class="button-like" href="#tally-open=3qEBk7&tally-layout=modal&tally-width=380&tally-emoji-animation=none&tally-auto-close=2000" onClick="document.getElementById('hamburger-menu').classList.toggle('expanded');">Login</a>
         </div>
       </li>
     </ul>
@@ -136,7 +137,7 @@
           </div>
         </div>
       </div>
-      <a class="button-like cta" href="./redirect.html?s=main-cta">Create first coupon</a>
+      <a class="button-like cta" href="#tally-open=3qEBk7&tally-layout=modal&tally-width=380&tally-emoji-animation=none&tally-auto-close=2000">Create first coupon</a>
       <div class="intro-image">
         <img decoding="async" src="./images/app-list-framed.png" alt="application screenshot" />
       </div>
@@ -195,7 +196,7 @@
     </section>
     
     <section class="cta-only">
-      <a class="button-like cta" href="./redirect.html?s=main-cta">Sign up</a>
+      <a class="button-like cta" href="#tally-open=3qEBk7&tally-layout=modal&tally-width=380&tally-emoji-animation=none&tally-auto-close=2000">Sign up</a>
     </section>
 
     <section id="features">
@@ -257,7 +258,7 @@
           </div>
         </li>
       </ul>
-      <a class="button-like cta" href="./redirect.html?s=features">Try for free</a>
+      <a class="button-like cta" href="#tally-open=3qEBk7&tally-layout=modal&tally-width=380&tally-emoji-animation=none&tally-auto-close=2000">Try for free</a>
     </section>
 
     <section id="pricing" class="yearly">
@@ -283,7 +284,7 @@
                 </div>
               </div>
               <div class="column-footer">
-                <a class="button-like" href="./redirect.html?s=free">Sign up</a>
+                <a class="button-like" href="#tally-open=3qEBk7&tally-layout=modal&tally-width=380&tally-emoji-animation=none&tally-auto-close=2000">Join waitlist</a>
               </div>
           </div>
           <div class="box most-popular">
