Don't close hamburger menu on login button click

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </li>
       <li>
         <div>
-          <a class="button-like" href="#tally-open=3qEBk7&tally-layout=modal&tally-width=380&tally-emoji-animation=none&tally-auto-close=2000" onClick="document.getElementById('hamburger-menu').classList.toggle('expanded');">Login</a>
+          <a class="button-like" href="#tally-open=3qEBk7&tally-layout=modal&tally-width=380&tally-emoji-animation=none&tally-auto-close=2000">Login</a>
         </div>
       </li>
     </ul>
