--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
                 </div>
               </div>
               <div class="column-footer">
-                <a class="button-like monthly" href="https://buy.stripe.com/7sI16V4NB0xl3bW146">Pre-order</a>
-                <a class="button-like yearly" href="https://buy.stripe.com/8wMg1P2Ft5RF5k49AA">Pre-order</a>
+                <a class="button-like monthly" href="https://checkout.creategiftcoupons.com/b/7sI16V4NB0xl3bW146">Pre-order</a>
+                <a class="button-like yearly" href="https://checkout.creategiftcoupons.com/b/8wMg1P2Ft5RF5k49AA">Pre-order</a>
                 <!-- <a class="button-like monthly" href="https://buy.stripe.com/test_6oE0358PSgfM12gbII">Pre-order</a>
                 <a class="button-like yearly" href="https://buy.stripe.com/test_14kbLNd687JgbGU6oq">Pre-order</a> -->
               </div>
@@ -318,8 +318,8 @@
                 </div>
               </div>
               <div class="column-footer">
-                <a class="button-like monthly" href="https://buy.stripe.com/dR602R2Ftdk713O8wz">Pre-order</a>
-                <a class="button-like yearly" href="https://buy.stripe.com/bIYcPDgwj93RaEoeUV">Pre-order</a>
+                <a class="button-like monthly" href="https://checkout.creategiftcoupons.com/b/dR602R2Ftdk713O8wz">Pre-order</a>
+                <a class="button-like yearly" href="https://checkout.creategiftcoupons.com/b/bIYcPDgwj93RaEoeUV">Pre-order</a>
                 <!-- <a class="button-like monthly" href="https://buy.stripe.com/test_14k0359TW0gO3aoeUV">Pre-order</a>
                 <a class="button-like yearly" href="https://buy.stripe.com/test_14kdTV4zCd3A4es8wz">Pre-order</a> -->
               </div>
