Small screen styling

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <header>
         <a class="logo">
           <img decoding="async" src="./images/192icon.png" alt="logo" />
-          <span class="logo-text">Gift Coupon Maker</span>
+          <span class="logo-text hide-on-tablet">Gift Coupon Maker</span>
         </a>
         <ul class="horizontal hide-on-mobile">
           <li>
@@ -133,7 +133,7 @@
             </svg>
           </div>
           <div class="text">
-            <span class="w-700">+1000</span> happy users
+            <span class="w-700">+100</span> active pre-orders
           </div>
         </div>
       </div>
@@ -202,7 +202,7 @@
     <section id="features">
       <h2>Features</h2>
       <div class="main-text">Designed to simplify your experience.</div>
-      <ul class="boxes wide">
+      <ul class="boxes">
         <li class="horizontal">
           <div class="rounded-icon">
             <span class="material-symbols-outlined">speed</span>
@@ -347,9 +347,9 @@
       <div class="horizontal">
         <a class="logo">
           <img decoding="async" src="./images/192icon-white.png" alt="logo" />
-          <span class="logo-text">Gift Coupon Maker</span>
+          <span class="logo-text hide-on-tablet">Gift Coupon Maker</span>
         </a>
-        <div class="horizontal">          
+        <div class="horizontal">
           <ol class="vertical">
             <li>
               <a href="./index.html">Home</a>
