Better copy for how it works

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <span class="material-symbols-outlined">login</span>
               </div>
               <div class="text">
-                <span>Sign up.</span>
+                <span>1. Sign up.</span>
                 <div class="description">Registration will take you less than a minute.</div>
               </div>
             </li>
@@ -163,7 +163,7 @@
                 <span class="material-symbols-outlined">edit</span>
               </div>
               <div class="text">
-                <span>Create first coupon.</span>
+                <span>2. Create first coupon.</span>
                 <div class="description">You can do it on your computer or mobile device.</div>
               </div>
             </li>
@@ -172,8 +172,8 @@
                 <span class="material-symbols-outlined">share</span>
               </div>
               <div class="text">
-                <span>Share it.</span>
-                <div class="description">You can download coupon as PDF, print it or e-mail it directly from the app.</div>
+                <span>3. Share it.</span>
+                <div class="description">You can download coupon as PDF, print it or e-mail it to the customer directly from the app.</div>
               </div>
             </li>
             <li>
@@ -181,7 +181,7 @@
                 <span class="material-symbols-outlined">qr_code_2</span>
               </div>
               <div class="text">
-                <span>Scan to validate.</span>
+                <span>4. Scan to validate.</span>
                 <div class="description">When recipient want to use the coupon, scan the QR code on the coupon to validate it.</div>
               </div>
             </li>
