Fixed logo link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="sticky-header">
       <header>
-        <a class="logo">
+        <a class="logo" href="./index.html#">
           <img decoding="async" src="./images/192icon.png" alt="logo" />
           <span class="logo-text hide-on-tablet">Gift Coupon Maker</span>
         </a>
@@ -343,7 +343,7 @@
 
     <footer>
       <div class="horizontal">
-        <a class="logo">
+        <a class="logo" href="./index.html#">
           <img decoding="async" src="./images/192icon-white.png" alt="logo" />
           <span class="logo-text hide-on-tablet">Gift Coupon Maker</span>
         </a>
