--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
                   </div>
               </div>
               <div class="title">Basic</div>
-              <div class="price monthly">$11.90 / month</div>
-              <div class="price yearly">$9.50 / month</div>
+              <div class="price monthly">$11.90 <span>/ month</span></div>
+              <div class="price yearly">$9.50 <span>/ month</span></div>
               <div class="description">
                 10 coupons per month.
               </div>
@@ -310,8 +310,8 @@
         <div class="box">
             <div class="column-header ribbon-holder">
               <div class="title">Pro</div>
-              <div class="price monthly">$19.90 / month</div>
-              <div class="price yearly">$15.90 / month</div>
+              <div class="price monthly">$19.90 <span>/ month</span></div>
+              <div class="price yearly">$15.90 <span>/ month</span></div>
               <div class="description">
                 1000 coupons per month.
               </div>
