--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               </div>
               <div class="text">
                 <span>1. Sign up.</span>
-                <div class="description">Registration will take you less than a minute.</div>
+                <div class="description">Registration will take less than a minute.</div>
               </div>
             </li>
             <li>
@@ -164,7 +164,7 @@
               </div>
               <div class="text">
                 <span>2. Create first coupon.</span>
-                <div class="description">You can do it on your computer or mobile device.</div>
+                <div class="description">You can do this on either your computer or mobile device.</div>
               </div>
             </li>
             <li>
@@ -173,7 +173,7 @@
               </div>
               <div class="text">
                 <span>3. Share it.</span>
-                <div class="description">You can download coupon as PDF, print it or e-mail it to the customer directly from the app.</div>
+                <div class="description">You can download the coupon as a PDF, print it, or email it to the customer directly from the app.</div>
               </div>
             </li>
             <li>
@@ -182,7 +182,7 @@
               </div>
               <div class="text">
                 <span>4. Scan to validate.</span>
-                <div class="description">When recipient want to use the coupon, scan the QR code on the coupon to validate it.</div>
+                <div class="description">When the recipient wants to redeem the coupon, scan the QR code on the coupon to validate it.</div>
               </div>
             </li>
           </ul>
@@ -254,7 +254,7 @@
           </div>
           <div class="text">
             <h5>Secure.</h5>
-            <div>Avoid the same coupon being used multiple times.</div>
+            <div>Prevent the same coupon from being redeemed multiple times.</div>
           </div>
         </li>
       </ul>
