--- a/index.html
+++ b/index.html
@@ -258,6 +258,9 @@
           </div>
         </li>
       </ul>
+    </section>
+    
+    <section class="cta-only">
       <a class="button-like cta" href="#tally-open=3qEBk7&tally-layout=modal&tally-width=380&tally-emoji-animation=none&tally-auto-close=5000">Try for free</a>
     </section>
 
