--- a/index.html
+++ b/index.html
@@ -327,9 +327,14 @@
             </div>
         </div>
       </div>
-      <div class="pricing-footer">
+    </section>
+    
+    <section>
+      <h2>Coming this winter.</h2>
+      <div class="main-text">
         With a pre-order, you get a <span class="w-700">lifetime 30% discount</span> on any package.
       </div>
+      <a class="button-like cta" href="https://checkout.creategiftcoupons.com/b/dR602R2Ftdk713O8wz">Pre-order</a>
     </section>
 
     <section id="contact" class="text-by-image">
