--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="shortcut icon" href="./images/192icon.png" type="image/png">
     <link rel="apple-touch-icon" href="./images/192icon.png" type="image/png">
     <title>Free Gift Coupon Maker</title>
-    <meta name="description" content="Create beautifully designed gift coupons for your customers in less than a minute." />
+    <meta name="description" content="Easily create stunning gift coupons for customers in seconds. An ideal way to drive loyalty and customer engagement." />
     <link rel="canonical" href="https://www.creategiftcoupons.com/">
     <meta property="og:title" content="Free Gift Coupon Maker">
-    <meta property="og:description" content="Create beautifully designed gift coupons for your customers in less than a minute.">
+    <meta property="og:description" content="Easily create stunning gift coupons for customers in seconds. An ideal way to drive loyalty and customer engagement.">
     <meta property="og:url" content="https://www.creategiftcoupons.com/">
     <meta property="og:site_name" content="Free Gift Coupon Maker">
     <meta property="og:type" content="website">
@@ -18,7 +18,7 @@
     <meta name="google-site-verification" content="E-J6jssGMO7DsJU74ixACYVaPxz0m_aLPopzxmUZw4o"> -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Free Gift Coupon Maker">
-    <meta name="twitter:description" content="Create beautifully designed gift coupons for your customers in less than a minute.">
+    <meta name="twitter:description" content="Easily create stunning gift coupons for customers in seconds. An ideal way to drive loyalty and customer engagement.">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
