Domain change giftcardmaker.net

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="apple-touch-icon" href="./images/192icon.png" type="image/png">
     <title>Free Gift Coupon Maker</title>
     <meta name="description" content="Easily create stunning gift coupons for customers in seconds. An ideal way to drive loyalty and customer engagement." />
-    <link rel="canonical" href="https://www.creategiftcoupons.com/">
+    <link rel="canonical" href="https://www.giftcardmaker.net/">
     <meta property="og:title" content="Free Gift Coupon Maker">
     <meta property="og:description" content="Easily create stunning gift coupons for customers in seconds. An ideal way to drive loyalty and customer engagement.">
-    <meta property="og:url" content="https://www.creategiftcoupons.com/">
+    <meta property="og:url" content="https://www.giftcardmaker.net/">
     <meta property="og:site_name" content="Free Gift Coupon Maker">
     <meta property="og:type" content="website">
     <!-- <meta name="facebook-domain-verification" content="7v544d9mz1r41d8wwb1fru6hel1vy0">
@@ -304,8 +304,8 @@
               </div>
             </div>
             <div class="column-footer">
-              <a class="button-like monthly" href="https://checkout.creategiftcoupons.com/b/dR602R2Ftdk713O8wz">Pre-order</a>
-              <a class="button-like yearly" href="https://checkout.creategiftcoupons.com/b/dR602R2Ftdk713O8wz">Pre-order</a>
+              <a class="button-like monthly" href="https://checkout.giftcardmaker.net/b/dR602R2Ftdk713O8wz">Pre-order</a>
+              <a class="button-like yearly" href="https://checkout.giftcardmaker.net/b/dR602R2Ftdk713O8wz">Pre-order</a>
               <!-- <a class="button-like monthly" href="https://buy.stripe.com/test_6oE0358PSgfM12gbII">Pre-order</a>
               <a class="button-like yearly" href="https://buy.stripe.com/test_14kbLNd687JgbGU6oq">Pre-order</a> -->
             </div>
@@ -320,8 +320,8 @@
               </div>
             </div>
             <div class="column-footer">
-              <a class="button-like monthly" href="https://checkout.creategiftcoupons.com/b/dR602R2Ftdk713O8wz">Pre-order</a>
-              <a class="button-like yearly" href="https://checkout.creategiftcoupons.com/b/dR602R2Ftdk713O8wz">Pre-order</a>
+              <a class="button-like monthly" href="https://checkout.giftcardmaker.net/b/dR602R2Ftdk713O8wz">Pre-order</a>
+              <a class="button-like yearly" href="https://checkout.giftcardmaker.net/b/dR602R2Ftdk713O8wz">Pre-order</a>
               <!-- <a class="button-like monthly" href="https://buy.stripe.com/test_14k0359TW0gO3aoeUV">Pre-order</a>
               <a class="button-like yearly" href="https://buy.stripe.com/test_14kdTV4zCd3A4es8wz">Pre-order</a> -->
             </div>
@@ -334,7 +334,7 @@
       <div class="main-text">
         With a pre-order, you get a <span class="w-700">lifetime 30% discount</span> on any package.
       </div>
-      <a class="button-like cta" href="https://checkout.creategiftcoupons.com/b/dR602R2Ftdk713O8wz">Pre-order</a>
+      <a class="button-like cta" href="https://checkout.giftcardmaker.net/b/dR602R2Ftdk713O8wz">Pre-order</a>
     </section>
 
     <section id="contact" class="text-by-image">
@@ -346,8 +346,8 @@
       <div class="right text"> 
         <div class="center-vertically">
           <h2>Have a question?</h2>
-          <div class="main-text">Feel free to email us at <a href="mailto:info@creategiftcoupons.com">info@creategiftcoupons.com</a>. We’ll be happy to assist you.</div>
-          <a class="button-like cta" href="mailto:info@creategiftcoupons.com">Contact us</a>
+          <div class="main-text">Feel free to email us at <a href="mailto:info@giftcardmaker.net">info@giftcardmaker.net</a>. We’ll be happy to assist you.</div>
+          <a class="button-like cta" href="mailto:info@giftcardmaker.net">Contact us</a>
         </div>
       </div>
     </section>
