--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <link rel="icon" sizes="192x192" href="./images/192icon.png" type="image/png">
     <link rel="shortcut icon" href="./images/192icon.png" type="image/png">
     <link rel="apple-touch-icon" href="./images/192icon.png" type="image/png">
-    <title>Free Gift Coupon Maker</title>
+    <title>Free Gift Card Maker</title>
     <meta name="description" content="Easily create stunning gift coupons for customers in seconds. An ideal way to drive loyalty and customer engagement." />
     <link rel="canonical" href="https://www.giftcardmaker.net/">
-    <meta property="og:title" content="Free Gift Coupon Maker">
+    <meta property="og:title" content="Free Gift Card Maker">
     <meta property="og:description" content="Easily create stunning gift coupons for customers in seconds. An ideal way to drive loyalty and customer engagement.">
     <meta property="og:url" content="https://www.giftcardmaker.net/">
-    <meta property="og:site_name" content="Free Gift Coupon Maker">
+    <meta property="og:site_name" content="Free Gift Card Maker">
     <meta property="og:type" content="website">
     <!-- <meta name="facebook-domain-verification" content="7v544d9mz1r41d8wwb1fru6hel1vy0">
     <meta name="google-site-verification" content="E-J6jssGMO7DsJU74ixACYVaPxz0m_aLPopzxmUZw4o"> -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Free Gift Coupon Maker">
+    <meta name="twitter:title" content="Free Gift Card Maker">
     <meta name="twitter:description" content="Easily create stunning gift coupons for customers in seconds. An ideal way to drive loyalty and customer engagement.">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
@@ -48,7 +48,7 @@
       <header>
         <a class="logo" href="./index.html#">
           <img decoding="async" src="./images/192icon.png" alt="logo" />
-          <span class="logo-text hide-on-tablet">Gift Coupon Maker</span>
+          <span class="logo-text hide-on-tablet">Gift Card Maker</span>
         </a>
         <ul class="horizontal hide-on-mobile">
           <li>
@@ -356,7 +356,7 @@
       <div class="horizontal">
         <a class="logo" href="./index.html#">
           <img decoding="async" src="./images/192icon-white.png" alt="logo" />
-          <span class="logo-text hide-on-tablet">Gift Coupon Maker</span>
+          <span class="logo-text hide-on-tablet">Gift Card Maker</span>
         </a>
         <div class="horizontal">
           <ol class="vertical">
