Changed stripe links

--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
               </div>
             </div>
             <div class="column-footer">
-              <a class="button-like monthly" href="https://checkout.giftcardmaker.net/b/dR602R2Ftdk713O8wz">Pre-order</a>
-              <a class="button-like yearly" href="https://checkout.giftcardmaker.net/b/dR602R2Ftdk713O8wz">Pre-order</a>
+              <a class="button-like monthly" href="https://buy.stripe.com/dR602R2Ftdk713O8wz">Pre-order</a>
+              <a class="button-like yearly" href="https://buy.stripe.com/dR602R2Ftdk713O8wz">Pre-order</a>
               <!-- <a class="button-like monthly" href="https://buy.stripe.com/test_6oE0358PSgfM12gbII">Pre-order</a>
               <a class="button-like yearly" href="https://buy.stripe.com/test_14kbLNd687JgbGU6oq">Pre-order</a> -->
             </div>
@@ -320,8 +320,8 @@
               </div>
             </div>
             <div class="column-footer">
-              <a class="button-like monthly" href="https://checkout.giftcardmaker.net/b/dR602R2Ftdk713O8wz">Pre-order</a>
-              <a class="button-like yearly" href="https://checkout.giftcardmaker.net/b/dR602R2Ftdk713O8wz">Pre-order</a>
+              <a class="button-like monthly" href="https://buy.stripe.com/dR602R2Ftdk713O8wz">Pre-order</a>
+              <a class="button-like yearly" href="https://buy.stripe.com/dR602R2Ftdk713O8wz">Pre-order</a>
               <!-- <a class="button-like monthly" href="https://buy.stripe.com/test_14k0359TW0gO3aoeUV">Pre-order</a>
               <a class="button-like yearly" href="https://buy.stripe.com/test_14kdTV4zCd3A4es8wz">Pre-order</a> -->
             </div>
